--- a/MvcProjeKampi/Views/Message/Sendbox.cshtml
+++ b/MvcProjeKampi/Views/Message/Sendbox.cshtml
@@ -80,21 +80,29 @@
                                     {
 
 
-                                        <tr>
-                                            <td>
-                                                <div class="icheck-primary">
-                                                    <input type="checkbox" value="" id="check1">
-                                                    <label for="check1"></label>
-                                                </div>
-                                            </td>
-                                            <td class="mailbox-star"><a href="/Message/GetSendboxMessageDetails/@item.MessageID"><i class="fas fa-star text-warning"></i></a></td>
-                                            <td class="mailbox-name"><a href="/Message/GetSendboxMessageDetails/@item.MessageID">@item.ReceiverMail</a></td>
-                                            <td class="mailbox-subject">
-                                                <b>@item.Subject</b> - @item.MessageContent.Substring(0, 10)...
-                                            </td>
-                                            <td class="mailbox-attachment"></td>
-                                            <td class="mailbox-date">@(((DateTime)item.MessageDate).ToString("dd-MMM-yyyy"))</td>
-                                        </tr>
+                                    <tr>
+                                        <td>
+                                            <div class="icheck-primary">
+                                                <input type="checkbox" value="" id="check1">
+                                                <label for="check1"></label>
+                                            </div>
+                                        </td>
+                                        <td class="mailbox-star"><a href="/Message/GetSendboxMessageDetails/@item.MessageID"><i class="fas fa-star text-warning"></i></a></td>
+                                        <td class="mailbox-name"><a href="/Message/GetSendboxMessageDetails/@item.MessageID">@item.ReceiverMail</a></td>
+                                        <td class="mailbox-subject">
+                                            <b>@item.Subject</b> - @item.MessageContent.Substring(0, 10)...
+                                        </td>
+                                        <td class="mailbox-attachment"></td>
+                                        @if (item.MessageIsReaden == false)
+                                        {
+                                            <td><a class="btn btn-success" href="/Message/SenReaden/@item.MessageID">Okundu olarak işaretle</a></td>
+                                        }
+                                        else
+                                        {
+                                            <td><a class="btn btn-danger" href="/Message/SenUnReaden/@item.MessageID">Okunmadı olarak işaretle</a></td>
+                                        }
+                                        <td class="mailbox-date">@(((DateTime)item.MessageDate).ToString("dd-MMM-yyyy"))</td>
+                                    </tr>
                                     }
                                 </tbody>
                             </table>
